--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1258,15 +1258,13 @@
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>From Time:
-                                    <input myNumberOnly type="text" pattern="\d{2}" class="form-control" maxlength="2"
-                                        formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>To Time:
-                                    <input myNumberOnly type="text" pattern="\d{2}" class="form-control" maxlength="2"
-                                        formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
@@ -1361,8 +1359,7 @@
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>Experience:
-                                    <input myNumberOnly type="text" pattern="\d{2}" maxlength="2" class="form-control"
-                                        formControlName="experience">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="experience">
                                 </label>
 
                             </div>
@@ -1444,15 +1441,13 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> From Time:
-                                    <input myNumberOnly type="text" pattern="\d{2}" class="form-control" maxlength="2"
-                                        formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> To Time:
-                                    <input myNumberOnly type="text" pattern="\d{2}" class="form-control" maxlength="2"
-                                        formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
@@ -1546,8 +1541,7 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> Experience:
-                                    <input myNumberOnly type="text" pattern="\d{2}" maxlength="2" class="form-control"
-                                        formControlName="experience">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="experience">
                                 </label>
 
                             </div>
@@ -1670,15 +1664,13 @@
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>From Time:
-                                    <input myNumberOnly type="text" pattern="\d{2}" class="form-control" maxlength="2"
-                                        formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>To Time:
-                                    <input myNumberOnly maxlength="2" pattern="\d{2}" type="text" class="form-control"
-                                        formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
@@ -1773,8 +1765,7 @@
                             <div class="form-group col-4">
 
                                 <label for="technology"><span class="red">*</span>Experience:
-                                    <input myNumberOnly type="text" pattern="\d{2}" maxlength="2" class="form-control"
-                                        formControlName="experience">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="experience">
                                 </label>
 
                             </div>
@@ -2308,15 +2299,13 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> From Time:
-                                    <input myNumberOnly type="text" pattern="\d{2}" class="form-control" maxlength="2"
-                                        formControlName="fromTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="fromTime">
                                 </label>
                             </div>
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> To Time:
-                                    <input myNumberOnly type="text" pattern="\d{2}" class="form-control" maxlength="2"
-                                        formControlName="toTime">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="toTime">
                                 </label>
                             </div>
                         </div>
@@ -2410,8 +2399,7 @@
                             <div class="form-group col-4">
                                 <label>
                                     <span class="red">*</span> Experience:
-                                    <input myNumberOnly type="text" pattern="\d{2}" maxlength="2" class="form-control"
-                                        formControlName="experience">
+                                    <input myNumberOnly type="text" class="form-control" formControlName="experience">
                                 </label>
 
                             </div>
