--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -220,7 +220,9 @@
                                         {{data.address}},{{data.city}}</p>
                                 </div>
                             </div>
-                            <div class="btn custom-ss-event-btn" routerLink="/techevent">Register Now</div>
+                            <div class="btn custom-ss-event-btn" *ngIf="data.showReg == undefined"
+                                routerLink="/techevent">
+                                Register Now</div>
                         </div>
 
                     </div>
