--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <span style="text-align: center;  width: 100%;">
-      <h1 style="color : #33099e;">Profile</h1>
+      <h4 class="text-center title-style">Profile</h4>
     </span>
-  </div>
+  </div><br />
   <div class="row">
     <div class="col-sm-2" style="text-align: center">
       <div>
@@ -79,7 +79,7 @@
   <br />
   <div class="row">
     <span style="text-align: left;  width: 100%; background-color: #33099e;">
-      <h3 style="color : white; margin: 0.5em;">BASIC INFORMATION</h3>
+      <h3 class="profile-title">BASIC INFORMATION</h3>
     </span>
   </div>
 
@@ -127,12 +127,13 @@
     </div>
     <div class="row">
       <span style="text-align: left;  width: 100%; background-color: #33099e;">
-        <h3 style="color : white; margin: 0.5em;">PROJECT INFORMATION</h3>
+        <h3 class="profile-title">PROJECT INFORMATION</h3>
       </span>
       <div class="col-sm-12">
 
         <span>
-          <h4>Mini Project</h4>
+          <h4 style="font-size:20px;padding-top: 10px;
+          padding-bottom: 10px;">Mini Project</h4>
         </span>
         <div class="form-group">
           <label for="miniprojecttitle">Project Title:</label>
@@ -147,7 +148,8 @@
       </div>
       <div class="col-sm-12">
         <span>
-          <h4>Major Project</h4>
+          <h4 style="font-size:20px;padding-top: 10px;
+          padding-bottom: 10px;">Major Project</h4>
         </span>
         <div class="form-group">
           <label for="majorprojecttitle">Project Title:</label>
@@ -168,7 +170,7 @@
 
     <div class="row">
       <span style="text-align: left;  width: 100%; background-color: #33099e;">
-        <h3 style="color : white; margin: 0.5em;">INTERNSHIP</h3>
+        <h3 class="profile-title">INTERNSHIP</h3>
       </span>
 
       <div class="col-sm-12">
@@ -250,7 +252,7 @@
 
     <div class="row">
       <span style="text-align: left;  width: 100%; background-color: #33099e;">
-        <h3 style="color : white; margin: 0.5em;">EXTRA SKILLS</h3>
+        <h3 class="profile-title">EXTRA SKILLS</h3>
       </span>
 
       <div class="col-sm-12">
@@ -275,7 +277,7 @@
 
     <div class="row">
       <span style="text-align: left;  width: 100%; background-color: #33099e;">
-        <h3 style="color : white; margin: 0.5em;">TRAINING</h3>
+        <h3 class="profile-title">TRAINING</h3>
       </span>
 
       <div class="col-sm-12">
