--- a/src/app/stuvation/stuvation.component.html
+++ b/src/app/stuvation/stuvation.component.html
@@ -3,9 +3,7 @@
     &nbsp;
   </div>
   <div class="col-md-4 col-sm-12 col-xs-12">
-    <h4 class="text-center" style="position: relative;
-    top: 11px;
-    color: #420aa7;font-size:27px">Stuvations (Student + Innovation)</h4>
+    <h4 class="text-center title-style">Stuvations (Student + Innovation)</h4>
   </div>
   <div class="col-md-4 col-sm-12 col-xs-12" *ngIf="!checkLoginStatus()" style="display:inline-flex">
     <button type="button" class="btn btn-primary buttonarticle"
