--- a/src/app/tech-article/tech-article.component.html
+++ b/src/app/tech-article/tech-article.component.html
@@ -3,7 +3,7 @@
     &nbsp;
   </div>
   <div class="col-md-4 col-sm-12 col-xs-12">
-    <h2 class="text-center">Tech Articles</h2>
+    <h4 class="text-center title-style">Tech Articles</h4>
   </div>
   <div class="col-md-4 col-sm-12 col-xs-12">
     <button *ngIf="!checkLoginStatus()" type="button" class="buttonarticle crt-btn" data-toggle="modal"
