--- a/src/app/tech-bank/tech-bank.component.html
+++ b/src/app/tech-bank/tech-bank.component.html
@@ -275,7 +275,7 @@
                 <br />
                 <b>Abstract</b> :<span style="word-wrap: break-word"> {{selectedTechTeach.abstract}}</span>
                 <br />
-                <b>Industrial Details</b> : {{selectedTechTeach.speaker_name}}
+                <b>Industrial Details</b> : {{selectedTechTeach.expert_name}}
                 <br />
                 <b>No. of Years Experience</b> : {{selectedTechTeach.experience}}
                 <br />
@@ -290,7 +290,7 @@
                 <br />
                 <b>Web Address</b> : {{selectedTechTeach.web_address}}
                 <br />
-                <b>Maximum Registration Count</b> : {{selectedTechTeach.maxregcount}}
+                <b>Maximum Registration Count</b> : {{selectedTechTeach.max_reg_allowed}}
                 <br />
                 <b>Registration Fees</b> : {{selectedTechTeach.reg_fee}} Rs Per Person
                 <br />
@@ -333,10 +333,10 @@
                 <b>Name</b> : {{selectedTechTalk.user_name}}
 
                 <br />
-                <b>Contact Number</b> :
+                <b>Contact Number</b> : {{selectedTechTalk.contact_number}}
 
                 <br />
-                <b>Email</b> :
+                <b>Email</b> : {{selectedTechTalk.contact_email}}
                 <br />
 
                 <br />
@@ -379,7 +379,7 @@
                 <br />
                 <b>Web Address</b> : {{selectedTechTalk.web_address}}
                 <br />
-                <b>Maximum Registration Count</b> :
+                <b>Maximum Registration Count</b> : {{selectedTechTalk.max_reg_allowed}}
                 <br />
                 <b>Registration Fees</b> : {{selectedTechTalk.reg_fee}} Rs Per Person
                 <br />
