--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -50,7 +50,7 @@
           <span style="color:#33099e; font-weight: bold">Tech Connect</span>
           <hr class="hrnew">
           Tech Talk:{{userData.tech_talk?.tech_talk_count}}
-          <br /> Tech Teach: {{userData.tech_teach.length}}
+          <br /> Tech Teach: {{techteachlength}}
           <br /> Workshop: {{userData.tech_talk?.work_shop_count}}
           <br /> Trainings: {{userData.tech_talk?.trainings_count}}
         </div>
